# slock-desktop

./: .impeccable.md  README.md  README.zh.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: pages.yml
docs/: api-docs.html  index.html  styles.css
site/: api-docs.html  index.html  styles.css
src/: App.css  App.tsx  Settings.css  design-system.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_card_inject.rs  agent_env_import.rs  config.rs  lib.rs  theme.rs  workspace.rs
src/lib/: desktop.ts
