[package]
name = "app"
version = "0.2.5"
description = "Slock Desktop"
authors = ["Yan Tingwang"]
license = ""
repository = "https://github.com/codephage2020/slock-desktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2.10.1"
